; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_arena.c_arena_slab_dalloc.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_arena.c_arena_slab_dalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LG_PAGE = common dso_local global i32 0, align 4
@EXTENT_HOOKS_INITIALIZER = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*)* @arena_slab_dalloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @arena_slab_dalloc(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = call i32 @extent_size_get(i32* %9)
  %11 = load i32, i32* @LG_PAGE, align 4
  %12 = ashr i32 %10, %11
  %13 = call i32 @arena_nactive_sub(i32* %8, i32 %12)
  %14 = load i32*, i32** @EXTENT_HOOKS_INITIALIZER, align 8
  store i32* %14, i32** %7, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @arena_extents_dirty_dalloc(i32* %15, i32* %16, i32** %7, i32* %17)
  ret void
}

declare dso_local i32 @arena_nactive_sub(i32*, i32) #1

declare dso_local i32 @extent_size_get(i32*) #1

declare dso_local i32 @arena_extents_dirty_dalloc(i32*, i32*, i32**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
